chore(_product.scss): set width to 100% to avoid responsiveness problems on iOS img

--- a/@ecomplus/storefront-template/template/scss/components/_product.scss
+++ b/@ecomplus/storefront-template/template/scss/components/_product.scss
@@ -17,6 +17,7 @@
           position: absolute;
           top: 0;
           left: 0;
+          width: 100%;
         }
       }
     }
@@ -24,6 +25,7 @@
     img {
       max-width: 100%;
       height: auto;
+      width: 100%;
     }
   }
   &__stamps {
